--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci # 安装依赖
+        - npm install # 安装依赖
     build:
       commands:
         - npm run build # 构建项目
