--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,33 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.5.2",
-    "antd": "^5.22.3",
-    "antd-style": "^3.7.1",
-    "axios": "^1.7.9",
+    "@ant-design/icons": "^5.5.1",
+    "@nextui-org/navbar": "^2.0.37",
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
+    "antd": "^5.21.4",
+    "antd-style": "^3.7.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.13.1",
-    "glob": "^11.0.0",
+    "framer-motion": "^11.11.1",
     "json2csv": "^6.0.0-alpha.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "next": "15.0.4",
-    "react": "^19",
-    "react-dom": "^19",
-    "rimraf": "^6.0.1",
+    "next": "14.2.14",
+    "react": "^18",
+    "react-dom": "^18",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.0.4",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5"
   }
 }
